# NEXUS-Workspace-Manager

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  BEST_PRACTICES_SUMMARY.md  BIN_INTEGRATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_DATE.md  CONTRIBUTING.md  CUSTOM_PROFILES_SUMMARY.md  DEPLOYMENT_READINESS_REPORT.md  FEATURE_TESTING_REPORT.md  GUIDES_SUMMARY.md  MLX_ANALYSIS_FOR_NEXUS.md  Makefile  NEO_SUPPORT_ANALYSIS.md  NEXUS_FINAL_SUMMARY.md  NEXUS_FINAL_TEST_REPORT.md  PROJECT_ORGANIZATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START_GUIDE.md  README.md  SECURITY.md  WHAT_IS_NEXUS_SIMPLE.md  WHAT_WE_JUST_DID.md  create_nexus_app.sh  daily_routine.sh  dynamic_layout_manager.py  launch_dynamic_layout.sh  launcher.sh  neural_engine_processor_mlx.py  pyproject.toml  requirements-dev.txt  requirements.txt  restart_nexus.sh  start_nexus.sh  yabairc_additions.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  question.md
.github/workflows/: ci.yml
archive/2025-08-09/legacy/: INTERACTIVE_GUIDE.md  launch_interactive_guide.sh  layout_dashboard.py
configs/: adaptive_layout.yaml  current_display_config.json  display_layout.txt  dynamic_layout_config.yaml  layout_state.json  nexus.yaml
configs/environments/: nexus.env.example
configs/integrations/: bettertouchtool_preset.bttpreset  bettertouchtool_yabai_bridge.bttpreset  install_integrations.sh  keyboard_maestro_macros.kmmacros  keyboard_maestro_yabai_bridge.kmmacros  nexus_enhanced_gestures.bttpreset  nexus_enhanced_macros.kmmacros  nexus_enhanced_shortcuts.shortcut
configs/integrations/n8n/: docker-compose.yml  nexus_webhook_workflow.json  run_n8n.sh  simple_webhook.json
configs/integrations/raycast_yabai_extension/: index.tsx  package.json
configs/iterm2/: NEXUS_iTerm2_Profile.json
configs/layouts/: teste.json
configs/profiles/: ai_business_profile.sh  ai_content_creation_profile.sh  ai_development_profile.sh  ai_gaming_profile.sh  ai_learning_profile.sh  business_profile.sh  content_creation_profile.sh  focus_profile.sh  gaming_profile.sh  learning_profile.sh  work_profile.sh  yabai_config.yaml
configs/settings/: api_keys.yaml
configs/skhd/: skhd.plist  skhdrc
configs/yabai/: yabai.plist  yabai_config.yaml  yabairc
dashboard/: api_keys_ui.py  interactive_guide.py  model_analytics_ui.py  model_management_ui.py  requirements.txt  requirements_dashboard.txt
docs/: ADAPTIVE_DISPLAY_SUPPORT.md  AI_PROFILES_SUMMARY.md  AUTOMATED_SHORTCUTS_CREATION.md  AUTO_WINDOW_ARRANGEMENT.md  CLEANUP_REPORT.md  DOCUMENTATION_INDEX.md  GITHUB_SETUP_GUIDE.md  ITERM2_NEXUS_SETUP.md  ITERM2_PROFILE_SUMMARY.md  NEXUS_INTERACTIVE_DASHBOARD_DESIGN.md  NEXUS_PRO_TIPS_AND_SUGGESTIONS.md  OBSIDIAN_UPDATE.md  PROFILE_UPDATE_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_BEST_PRACTICES.md  QUICK_START_GUIDE.md  SHORTCUTS_REFERENCE.md
docs/api/: DATA_COLLECTION_SUMMARY.md  DEVELOPMENT_SUMMARY.md  DYNAMIC_LAYOUT_README.md  DYNAMIC_LAYOUT_SUMMARY.md  MODEL_INTEGRATION_ANALYSIS.md  MODEL_INTEGRATION_SUMMARY.md  REAL_DATA_ANALYSIS.md
docs/configuration/: INTEGRATIONS_GUIDE.md
docs/developer-guides/: PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md
docs/installation/: INSTALLATION.md
docs/user-guides/: ENHANCED_AUTOMATIONS_GUIDE.md  INNOVATIVE_YABAI_BRIDGE_SOLUTION.md  USER_GUIDE.md
scripts/: adaptive_display_detector.sh  display_detector.sh  install_skhd.sh  nexus_floating_dashboard.sh  quick_app_launcher.sh  setup_iterm2_profile.sh  system_performance_monitor.sh
scripts/ai/: ai_integration.sh  ai_model_manager.py
scripts/analytics/: screen_time_collector.sh
scripts/automation/: auto_scheduler.sh  auto_window_arranger.sh  create_yabai_shortcuts_simple.sh  install_yabai_bridge.sh  launch_auto_arranger.sh  quick_app_launcher.sh  restructure_project.sh  setup_yabai_permissions.sh  test_auto_arrangement.sh  workspace_manager.sh  yabai_automation_bridge.py
scripts/install/: install_yabai_complete.sh
scripts/maintenance/: check_system_requirements.sh  check_system_simple.sh  ensure_floating_windows.sh  finalize_tiling_fix.sh  fix_shortcuts.sh  fix_tiling_both_displays.sh  organize_project.sh  set_floating_windows.sh  setup_advanced_automation.sh  sip_friendly_shortcuts.sh  test_yabai_setup.sh
scripts/setup/: Makefile  install_enhanced_automations.sh  launcher.sh
src/nexus/: __init__.py
src/nexus/cli/: __init__.py  ai_optimize.py  main.py  profile_switcher.py  quick_menu.py
src/nexus/core/: __init__.py
src/nexus/dashboard/: __init__.py  interactive_dashboard.py  workspace_dashboard.py
src/nexus/profiles/: __init__.py  ai_research_profile.sh  personal_profile.sh
src/nexus/utils/: api_keys.py  logger.py
tests/: __init__.py  pytest.ini
tests/integration/: test_nexus_integration.py
tests/unit/: test_ai_model_manager.py  test_analytics.py
tools/: README.md  enhanced-profile-loader  skhd-bridge  yabai-bridge
tools/ai/: ai_integration.sh  ai_workspace_optimizer.py  discover_models.py  enhanced_ai_integration.sh  install_mlx.sh  nexus_enhanced_bridge.py  smoke_mlx.py
tools/analytics/: activity_watch_integration.sh  screen_time_collector.sh
tools/automation/: create_all_yabai_shortcuts_automated.sh  launch_dashboard_popup.sh  launch_nexus_terminal.sh  restructure_project_fixed.sh  system_performance_monitor.sh
tools/shortcuts/: YABAI.code-workspace  nexus_enhanced_shortcut.shortcut  nexus_profiles_shortcut.sh  nexus_shortcuts_setup.sh  nexus_simple_shortcut.sh  setup_shortcuts.sh
