[project]
name = "nexus-workspace-manager"
version = "0.1.0"
description = "AI-Powered Workspace Intelligence for Apple Silicon - Local AI Model Management with YABAI Integration"
authors = [
    {name = "Eduardo Giovannini", email = "eduardo@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pydantic>=2,<3",
    "streamlit>=1.28.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "pathlib2>=2.3.7; python_version < '3.4'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools]
packages = []

[tool.uv]
index-url = "https://pypi.org/simple"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
